snek is everiwhere