@@ -61,16 +61,9 @@ public class Main {
         data.slides.remove(highestSlide1);
         data.slides.remove(highestSlide2);
 
-        Slide s3 = data.slides.get(0);
-        data.slides.remove(s3);
-        Slide s4 = data.slides.get(0);
-        data.slides.remove(s4);
-
         LinkedList<Slide> result = new LinkedList<>();
         result.push(highestSlide1);
         result.push(highestSlide2);
-        result.push(s3);
-        result.push(s4);
 
         while (data.slides.size() > 0) {
 
@@ -79,13 +72,11 @@ public class Main {
             boolean isStart = false;
             for (Slide slide : data.slides) {
 
-                //check start of snake
+                //check start of snek
                 {
                     Slide slide2 = result.get(0);
                     Slide slide3 = result.get(1);
-                    Slide slide4 = result.get(2);
-                    Slide slide5 = result.get(3);
-                    int score = calculateScore(slide, slide2, slide3, slide4, slide5);
+                    int score = calculateScore(slide, slide2, slide3);
                     if (score > highestScore) {
                         highestScore = score;
                         highestSlide = slide;
@@ -94,11 +85,9 @@ public class Main {
                 }
 
                 {
-                    Slide slide1 = result.get(result.size() - 4);
-                    Slide slide2 = result.get(result.size() - 3);
-                    Slide slide3 = result.get(result.size() - 2);
-                    Slide slide4 = result.getLast();
-                    int score = calculateScore(slide1, slide2, slide3, slide4, slide);
+                    Slide slide1 = result.get(result.size() - 2);
+                    Slide slide2 = result.get(result.size() - 1);
+                    int score = calculateScore(slide1, slide2, slide);
                     if (score > highestScore) {
                         highestScore = score;
                         highestSlide = slide;
@@ -133,11 +122,9 @@ public class Main {
         return common;
     }
 
-    public static int calculateScore(Slide slide1, Slide slide2, Slide slide3, Slide slide4, Slide slide5) {
+    public static int calculateScore(Slide slide1, Slide slide2, Slide slide3) {
         int common1 = calculateCommon(slide1, slide2);
         int common2 = calculateCommon(slide2, slide3);
-        int common3 = calculateCommon(slide3, slide4);
-        int common4 = calculateCommon(slide4, slide5);
-        return Math.min(Math.min(common1, common2), Math.min(common3, common4));
+        return Math.min(common1, common2);
     }
 }
